# esp-idf-test

./: Cargo.toml  diagram.json  partitions.csv  wokwi.toml
.cargo/: config.toml
src/: main.rs
