[package]
name = "esp-idf-test"
version = "0.1.0"
authors = ["Vigneshwaran P <vignesh@forge.gg>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-idf-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0.99"
esp-idf-svc = "0.51"
embedded-svc = "0.28.1"
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
rustls = { version = "*", features = ["custom-provider"], default-features = false }
reqwest =  { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json"] }
rustls-rustcrypto = "0.0.2-alpha"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"

[env]